--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
+  <h2><span>Lists</span></h2>
   <div class="row">
     <div class="col-md-3">
       <table class="table table-borderless category-table">
         <thead>
           <tr>
-            <th class="text_base">ジャンル</th>
+            <h4>ジャンル</h4>
           </tr>
         </thead>
         <tbody>
@@ -19,7 +20,6 @@
       </table>
 	  </div>
 	  <div class="col-md-8 offset-md-1">
-      <h2>Lists</h2>
       <% @lists.each do |list| %>
         <div class="mypage_list">
           <div class="media mt-3">
