--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   		<%= render 'info', user: current_user %>
   	</div>
   	<div class="col-md-8 offset-md-1">
-  	  <h2>Users</h2>
+  	  <h2><span>Users</span></h2>
   	  <%= render 'index', users: @users %>
   	</div>
   </div>
