--- a/app/views/lists/_comment.html.erb
+++ b/app/views/lists/_comment.html.erb
@@ -4,12 +4,12 @@
   	<td>
   		<%= link_to user_path(list_comment_user), class: "user_#{list_comment_user.id}" do %>
     		<%= attachment_image_tag list_comment_user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
-    		<%= list_comment_user.name %>
+    		<div class="ml-3 text_base"><%= list_comment_user.name %></div>
   		<% end %>
   	</td>
   	<td><%= list_comment.comment %></td>
   	<% if current_user == list_comment_user %>
-    	<td><%= link_to 'Destroy', list_list_comment_path(list_comment.list_id, list_comment.id), class: 'btn-sm btn-danger', method: :delete, remote:true %></td>
+    	<td><%= link_to 'Delete', list_list_comment_path(list_comment.list_id, list_comment.id), class: 'btn-sm btn-danger', method: :delete, remote:true %></td>
   	<% end %>
   </tr>
 <% end %>
