--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,47 @@
 <div class="container">
   <div class="row justify-content-center">
     <div class="">
-      <%= render 'users/info', user: @user %>
+
+    	<div class="user_info pb-3">
+			  <table class="table table-borderless text_base">
+			    <h3 class="ml-3"><%= @user.name %></h3>
+			    <div class="user_pic_box mypage_user_pic_box">
+			      <div class="user_pic">
+			        <%= attachment_image_tag @user, :profile_image, size: "190x190", fallback: "no_image.jpg" %>
+			      </div>
+			    </div>
+			    <div class="row mt-2">
+			      <div class="col">
+			        <div class="offset-6">フォロー中</div>
+			        <div class="offset-9"><%= link_to @user.followings.count, user_followings_path(@user), class:"text_base" %></div>
+			      </div>
+			      <div class="col">
+			        <div class="">フォロワー</div>
+			        <div class="offset-3"><%= link_to @user.followers.count, user_followers_path(@user), class:"text_base" %></div>
+			      </div>
+			    </div>
+			    <div class="mt-3">
+			      <div class="text-center"><%= @user.introduction %></div>
+			    </div>
+
+			  </table>
+			  <div class='row justify-content-center'>
+			    <% if current_user != @user %>
+			      <% if current_user.following?(@user) %>
+			        <%= link_to "フォロー中", user_relationships_path(@user.id), method: :delete, class: "btn user_btn btn_base text_base" %>
+			      <% else %>
+			        <%= link_to "フォローする", user_relationships_path(@user.id), method: :post, class: "btn user_btn btn_base text_base" %>
+			      <% end %>
+			    <% else %>
+			      <%= link_to 'プロフィールを編集', edit_user_path(@user), class: "btn user_btn btn_base text_base edit_user_#{@user.id}" %>
+
+			  </div>
+			  <div class="row justify-content-center">
+			    <%= link_to "新規投稿", new_list_path, class:"btn user_btn btn_base text_base mt-1" %>
+			    <% end %>
+			  </div>
+			</div>
+
 		  <h4>作成したリスト</h4>
 	      <% @lists.each do |list| %>
 	      <div class="media mt-3 mypage_list">
@@ -75,7 +115,7 @@
             <% end %>
           <% end %>
         <% end %>
-	  </div>
+	  	</div>
 	  </div>
   </div>
 </div>
