[design]検索ページ

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,11 @@
   	</div>
   	<div class="col-md-8 offset-md-1">
   	  <h2><span>Users</span></h2>
-  	  <%= render 'index', users: @users %>
+  	  <div class="row justify-content-center">
+  	    <div class="col-md-8">
+  	      <%= render 'index', users: @users %>
+  	    </div>
+  	  </div>
   	</div>
   </div>
 </div>
