--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,63 +1,73 @@
 <% if @datas.empty? %>
-  <div class="container">
-    <div class="mt-5">
-      <h3>検索結果：0件</h3>
+  <div class="row justify-content-center">
+    <div>
+      <div class="mt-5">
+        <h3>検索結果：0件</h3>
+      </div>
+      <div class="mt-5">
+        <p>
+          お探しのキーワードにマッチするものが見つかりませんでした。<br>
+          We couldn't find any matches for that.
+        </p>
+        <p>
+          もう一度、別のキーワードもしくはジャンルにてお探しいただければと思います。<br>
+          Please try searching with another keywords or genres.
+        </p>
+      </div>
     </div>
-    <div class="mt-5">
-      <p>
-        お探しのキーワードにマッチするものが見つかりませんでした。<br>
-        We couldn't find any matches for that.
-      </p>
-      <p>
-        もう一度、別のキーワードにてお探しいただければと思います。<br>
-        Please try searching with another keywords.
-      </p>
-    </div>
+
   </div>
 <% else %>
   <% if @model == 'user' %>
-  <div>
-    <table class='table text_base'>
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th>Name</th>
-          <th>Following</th>
-          <th>Follower</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @datas.each do |data| %>
-          <tr>
-            <td><%= attachment_image_tag(data, :profile_image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
-            <td><%= data.name %></td>
-            <td><%= data.followings.count %></td>
-            <td><%= data.followers.count %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <table class='table table-borderless text_base'>
+        <tbody>
+          <% @datas.each do |data| %>
+            <tr>
+              <td>
+                <div class="user_index_pic_box">
+                <%= link_to user_path(data.id) do %>
+                  <div class="user_index_pic">
+                    <%= attachment_image_tag data, :profile_image, size: "75x75", fallback: "no_image.jpg" %>
+                  </div>
+                <% end %>
+                </div>
+                <div class="ml-3"><%= data.name %></div>
+                </div>
+              </td>
+              <td class="align-middle"><%= data.followings.count %> following</td>
+              <td class="align-middle"><%= data.followers.count %> followers</td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
   </div>
   <% else %>
-  <div>
-    <table class='table text_base'>
-      <thead>
-        <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @datas.each do |data| %>
-          <tr>
-            <td><%= attachment_image_tag(data.user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg") %></td>
-            <td><%= data.list_title %></td>
-            <td><%= data.description %></td>
-          </tr>
+  <h4 class="text-center">Search Result:</h4>
+  <div class="row justify-content-center">
+    <div class="col-md-4">
+      <% @datas.each do |data| %>
+        <div class="mypage_list">
+          <div class="media mt-3">
+            <div class="d-flex m-3"><%= attachment_image_tag data, :image, size: "150x100", fallback: "no_image.jpg" %></div>
+            <div class="media-body">
+              <h5 class="mt-3"><%= link_to data.list_title, list_path(data.id), class:"text_base" %></h5>
+              <div>by <%= data.user.name %></div>
+              <% data.categories.each do |category| %>
+                <div class="badge badge-secondary">
+                  <%= category.name %>
+                </div>
+              <% end %>
+                <div>
+                  <%= data.description %>
+                </div>
+            </div>
+          </div>
+        </div>
         <% end %>
-      </tbody>
-    </table>
+    </div>
   </div>
   <% end %>
 <% end %>
