--- a/app/views/lists/_movie-form.html.erb
+++ b/app/views/lists/_movie-form.html.erb
@@ -1,11 +1,11 @@
 <div class="nested-fields">
   <div>
-    <%= f.label :title, "映画タイトル" %>
-    <%= f.text_field :title, class: "" %>
+    <%= f.label :title, "映画タイトル", class:"mt-3" %><br>
+    <%= f.text_field :title, class:"form-control" %>
   </div>
-  <div>
-    <%= f.label :impression, "この映画について" %>
-    <%= f.text_area :impression, class: "" %>
+  <div class="mb-4">
+    <%= f.label :impression, "この映画について", class:"mt-3" %><br>
+    <%= f.text_area :impression, class:"form-control" %>
   </div>
     <%= f.hidden_field :user_id, :value => current_user.id %>
 </div>
