--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,21 +1,45 @@
 <%= form_with model:list, local:true do |f| %>
-  <div class="form-group"><label>リストタイトル</label><br>
-    <%= f.text_field :list_title, class: "form-control" %></div>
-  <div class="form-group"><label>リスト説明文</label><br>
-    <%= f.text_area :description, class: "form-control" %></div>
+  <div>
+    <div>
+      <%= f.label :トップ画像, class:"mt-3" %><br />
+      <%= f.text_field :list_title, class: "form-control" %>
+    </div>
+    <div>
+      <%= f.label :トップ画像, class:"mt-3" %><br />
+      <%= f.text_area :description, class: "form-control" %></div>
+    </div>
 
-    <table>
-      <% @list.movies.each do |movie| %>
-        <% movie_user = movie.user %>
-        <tr>
-        	<td>・<%= movie.title %></td>
-        	<% if current_user == movie_user %>
-          	<td><%= link_to 'Destroy', list_movie_path(movie.list_id, movie.id), class: 'btn-sm btn-danger', method: :delete %></td>
-        	<% end %>
-        </tr>
+    <div class="mt-5">
+      <table>
+        <% @list.movies.each do |movie| %>
+          <% movie_user = movie.user %>
+          <tr>
+          	<div>『　<%= movie.title %>　』
+          	  <% if current_user == movie_user %>
+              	<%= link_to 'Delete', list_movie_path(movie.list_id, movie.id), class: 'btn-sm btn-danger', method: :delete %>
+          	  <% end %>
+          	</div>
+          	<div class="mt-2">　ー<%= movie.impression %></div>
+          </tr>
+        <% end %>
+      </table>
+    </div>
+    <!--映画追加用フォーム-->
+    <div>
+      <h4 class="mt-3">リスト内容</h4>
+      <%= f.fields_for :movies do |movie| %>
+        <%= render 'movie-form', f: movie %>
       <% end %>
-    </table>
-  <div class="actions">
-    <%= f.submit '完了', class: "btn btn-success col-xs-12" %>
+      <div class="links row justify-content-center">
+        <%= link_to_add_association "さらに映画を追加", f, :movies, partial: 'movie-form', class:"btn btn-secondary text_base" %>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+      <%= link_to "戻る", lists_path, class: "btn btn_base text_base user_btn" %>
+    </div>
+    <div class="actions row justify-content-center mt-2">
+      <%= f.submit '完了', class: "btn btn_base text_base user_btn" %>
+    </div>
+
   </div>
 <% end %>
