--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,10 +1,6 @@
-<div>
-  <div class="row">
-    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h1>リストを編集中</h1>
-      <%= render 'form', list: @list, movie: @movie %>
-      <%= link_to "Show", list_path(@list), class: "list_#{@list.id}" %> |
-      <%= link_to "Back", lists_path, class: "back" %>
-    </div>
+<h4><span>リストを編集中</span></h4>
+<div class="row justify-content-center">
+  <div class="col-md-4 mt-3">
+    <%= render 'form', list: @list, movie: @movie %>
   </div>
 </div>
