--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,20 @@
  *= require_self
  */
 @import "bootstrap";
+// google fontの導入
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Oswald&family=Ubuntu&display=swap');
+
+title {
+  font-family: 'Ubuntu', sans-serif;
+}
+.logo,
+footer {
+  font-family: 'Ubuntu', sans-serif;
+}
+main {
+  font-family: 'Noto Sans JP', sans-serif;
+}
 //いいねの赤いハート
 .heart_red{color:#e54747;}
 //いいねしていない状態
@@ -134,6 +148,9 @@ h4:before {
       border-color: #fff;
     }
   }
+}
+.nav-item {
+  font-family: 'Noto Sans JP', sans-serif;
 }
 .response {
   padding-right: 10px;
