[add]ページネーション

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="col-md-8 offset-md-2">
-      <h5 class="text_base">About "Behind me"</h5>
+      <h5 class="text_base">About "Bhind-Me"</h5>
       <p class="text_base">
         コロナ禍で、自宅にいる時間が長くなり、サブスクリプションの普及もあって、映画を見る機会が増えた今日この頃。<br><br>
         いつも同じようなオススメをしてくる機械じゃなくて、あなたのオススメが知りたい！<br><br>
@@ -9,14 +9,14 @@
         「最近結婚したあの友人が最近観たハッピーな映画を観て、自分もハッピーな気持ちになりたい！」<br><br>
         その人にしかできないオススメがきっとあるはず。<br><br>
         第７の芸術といわれる映画には、時間芸術も空間芸術も夢も詰まっている。<br>
-        とか堅苦しいことは置いといて、あなたのオススメした1本が他人の人生を変えるかもしれないし、<br>
+        とか堅苦しいことは置いといて、あなたのオススメした１本が他人の人生を変えるかもしれないし、<br>
         映画を見た後の抑えきれない気持ちを共有してみてもいいかもしれない。<br>
         「面白い映画知らない？」って聞かれた時、あなたの熱く語れるものをぜひここに。
       </p>
     </div>
     <br>
     <div class="col-md-8 offset-md-2">
-      <h5 class="text_base">About me</h5>
+      <h5 class="text_base">About Me</h5>
       <p class="text_base">
         高山 寛 | Kan TAKAYAMA<br><br>
         1996年生まれ。関西学院大学文学部文学言語学科ドイツ文学ドイツ語学専修卒。<br>
