--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -34,6 +34,13 @@
       		</div>
       	</div>
 			<% end %>
+			<div class="row justify-content-center">
+				<div class="text-center">
+					<!--pagenate-->
+      		<%= paginate @lists %>
+				</div>
+			</div>
+
 	</div>
 </div>
 <% else %>
