--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -34,7 +34,7 @@
       		</div>
       	</div>
 			<% end %>
-			<div class="row justify-content-center">
+			<div class="row justify-content-center mt-5">
 				<div class="text-center">
 					<!--pagenate-->
       		<%= paginate @lists %>
