[add]pagenate lists/index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,13 +42,13 @@ main {
   backgroung-position: center;
 }
 .testimage1 {
-  background-image: image-url("pexels-adrien-olichon-3709370.jpg");
+  background-image: image-url("pexels-kyle-loftus-3045400.jpg");
 }
 .testimage2 {
-  background-image: image-url("pexels-andrea-piacquadio-3811814.jpg");
+  background-image: image-url("pexels-lucas-pezeta-2398354.jpg");
 }
 .testimage3 {
-  background-image: image-url("pexels-andrea-piacquadio-3811851.jpg");
+  background-image: image-url("pexels-louis-1200450.jpg");
 }
 // ここからデザイン
 h2 {
