[add]ページトップに戻るボタン

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,13 +49,8 @@
     </main>
 
   </body>
-  <footer>
-    <div class='container mt-5'>
-      <div class='row mt-5'>
-        <div class='mx-auto'>
-          <p>Ⓒ 2021 Bhind-Me</p>
-        </div>
-      </div>
-    </div>
+  <footer id="footer">
+    <p id="page-top"><a href="#">Page Top</a></p>
+    <p class="text-center mt-5">&copy; 2021 Bhind-Me</p>
   </footer>
 </html>
