[design]ハンバーガーメニューと全体微調整

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,3 +1,5 @@
+<%= render "layouts/logo" %>
+
 <div class="container">
     <div class="col-md-8 offset-md-2">
       <h5 class="text_base">About "Bhind-Me"</h5>
