--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,9 +21,19 @@
 title {
   font-family: 'Ubuntu', sans-serif;
 }
+.menu_logo {
+  font-size: 32px;
+}
+.menu_logo:hover {
+  color: #d4d3de;
+}
 .logo,
 footer {
   font-family: 'Ubuntu', sans-serif;
+}
+.navbar {
+  height: 0;
+  padding: 0;
 }
 main {
   font-family: 'Noto Sans JP', sans-serif;
@@ -38,14 +48,15 @@ main {
 .bookmark_notyet{color:#808080;}
 // スライドショーのため
 #testbox{
-  height: 720px;
+  height: 788px;
   backgroung-position: center;
+  position: static;
 }
 .testimage1 {
-  background-image: image-url("pexels-kyle-loftus-3045400.jpg");
+  background-image: image-url("pexels-lucas-pezeta-2398354.jpg");
 }
 .testimage2 {
-  background-image: image-url("pexels-lucas-pezeta-2398354.jpg");
+  background-image: image-url("pexels-kyle-loftus-3045400.jpg");
 }
 .testimage3 {
   background-image: image-url("pexels-louis-1200450.jpg");
@@ -328,31 +339,83 @@ hr {
   }
 }
 
-/*========= レイアウトのためのCSS ===============*/
-
-// h1{
-//   font-size:1.2rem;
-// }
-
-// h2{
-//   font-size:1.2rem;
-//   text-align: center;
-//   margin: 0 0 30px 0;
-// }
-
-// p{
-//   margin-top:20px;
-// }
-
-// small{
-//   background:#333;
-//   color:#fff;
-//   display: block;
-//   text-align: center;
-//   padding:20px;
-// }
 #footer{
   position: relative;
   z-index: 2;
 }
 // ここまでページトップ
+
+// ハンバーガーメニュー
+/* ---- ハンバーガーアイコン ---- */
+#hm-icon {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  z-index: 20;
+  background-color: rgba(0, 0, 0, 0.25);
+}
+.menu-trigger,
+.menu-trigger span {
+  display: inline-block;
+  transition: all .4s;
+  box-sizing: border-box;
+}
+.menu-trigger {
+  position: relative;
+  width: 50px;
+  height: 44px;
+}
+.menu-trigger span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  border-radius: 4px;
+}
+.menu-trigger span:nth-child(1) {
+  top: 0;
+}
+.menu-trigger span:nth-child(2) {
+  top: 20px;
+}
+.menu-trigger span:nth-child(3) {
+  bottom: 0;
+}
+.menu-trigger.active span:nth-child(1) {
+  -webkit-transform: translateY(20px) rotate(-45deg);
+  transform: translateY(20px) rotate(-45deg);
+  background-color: #fff;
+}
+.menu-trigger.active span:nth-child(2) {
+  opacity: 0;
+}
+.menu-trigger.active span:nth-child(3) {
+  -webkit-transform: translateY(-20px) rotate(45deg);
+  transform: translateY(-20px) rotate(45deg);
+  background-color: #fff;
+}
+/* ------ spメニュー ------ */
+#sp-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  color: #fff;
+  width: 100%;
+  min-height: 100%;
+  display: none;
+  z-index: 20;
+}
+#sp-menu li {
+  text-align: center;
+  margin-bottom: 30px;
+}
+#sp-menu a {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+.menu_item {
+  list-style: none;
+}
