--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,8 +1,8 @@
 <div class="search_form">
   <%= form_tag(search_path, :method => 'get' ) do %>
     <%= text_field_tag 'search[content]' %>
-    <%= select_tag 'search[model]', options_for_select({ "User" => "user", "List" => "list" }) %>
+    <%= select_tag 'search[model]', options_for_select({ "ユーザー" => "user", "ムービーリスト" => "list" }) %>
     <%= select_tag 'search[how]', options_for_select({ "部分一致" => "partical", "完全一致" => "match"  }) %>
-    <%= submit_tag '検索', class: "btn btn-primary" %>
+    <%= submit_tag '検索', class: "btn btn-secondary mt-2" %>
   <% end %>
 </div>
