--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_with model:list, local:true do |f| %>
   <div>
     <div>
-      <%= f.label :トップ画像, class:"mt-3" %><br />
+      <%= f.label :タイトル, class:"mt-3" %><br />
       <%= f.text_field :list_title, class: "form-control" %>
     </div>
     <div>
-      <%= f.label :トップ画像, class:"mt-3" %><br />
+      <%= f.label :説明文, class:"mt-3" %><br />
       <%= f.text_area :description, class: "form-control" %></div>
     </div>
 
