--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -19,6 +19,7 @@
   </div>
 <% else %>
   <% if @model == 'user' %>
+  <h4 class="text-center">検索結果:</h4>
   <div class="row justify-content-center">
     <div class="col-md-4">
       <table class='table table-borderless text_base'>
@@ -45,7 +46,7 @@
     </div>
   </div>
   <% else %>
-  <h4 class="text-center">Search Result:</h4>
+  <h4 class="text-center">検索結果:</h4>
   <div class="row justify-content-center">
     <div class="col-md-4">
       <% @datas.each do |data| %>
