--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
   		<%= render 'info', user: current_user %>
   	</div>
   	<div class="col-md-8 offset-md-1">
-  	  <h2><span>Users</span></h2>
+  	  <h2><span>Account</span></h2>
   	  <div class="row justify-content-center">
   	    <div class="col-md-8">
   	      <%= render 'index', users: @users %>
