--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,8 @@
 <div class="split-box left-box">
   <div class="mt-5"><%= link_to "Home", root_path, class: 'text-decoration-none text_base ml-5' %></div>
+  <div class="col-sm-4 about_name_box">
+    <p class="about_name text-center mt-5">Kan TAKAYAMA</p>
+  </div>
 </div>
 
 <div class="split-box right-box">
@@ -47,5 +50,38 @@
       </p>
     </div>
   </div>
+
+  <h4 class="mb-5 mt-5"><span>Contact Me at</span></h4>
+  <div class="row justify-content-center mt-5 mb-5">
+    <div class="about_icon_box col-md-3 mt-5 mb-5">
+      <div class="row justify-content-center">
+        <div class="mt-5 mb-3"><i class="far fa-envelope about_icon"></i></div>
+      </div>
+      <h5 class="text_base text-center">Mail</h5>
+      <p class="text_base text-center mt-5 mb-5">
+        kanstephentakayama@gmail.com
+      </p>
+    </div>
+    <div class="about_icon_box col-md-3 mt-5 mb-5">
+      <div class="row justify-content-center">
+        <div class="mt-5 mb-3"><i class="fab fa-instagram about_icon"></i></div>
+      </div>
+      <h5 class="text_base text-center">Instagram</h5>
+      <p class="text_base text-center mt-5 mb-5">
+        @kan_takayama
+      </p>
+    </div>
+    <div class="about_icon_box col-md-3 mt-5 mb-5">
+      <div class="row justify-content-center">
+        <div class="mt-5 mb-3"><i class="fab fa-twitter about_icon"></i></div>
+      </div>
+      <h5 class="text_base text-center">Twitter</h5>
+      <p class="text_base text-center mt-5 mb-5">
+        @_1996112218<br>
+        タカヤマカン
+      </p>
+    </div>
+  </div>
+
   <p class="text-center mt-5">&copy; 2021 Bhind-Me</p>
 </div>
