--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -57,6 +57,9 @@ footer {
 main {
   font-family: 'Noto Sans JP', sans-serif;
 }
+#how_to_use {
+  margin-bottom: 120px;
+}
 //いいねの赤いハート
 .heart_red{color:#e54747;}
 //いいねしていない状態
