--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -36,7 +36,7 @@
     <div class="col-md-8">
       <h4 class="text_base">About Me</h4>
       <div class="row justify-content-center">
-        <div class="about_img mb-5"><%= image_tag "pexels-lucas-pezeta-2398354.jpg", class:"about_pic mb-5 mt-5" %></div>
+        <div class="about_img mb-5"><%= image_tag "IMG_3549 2.jpg", class:"about_pic mb-5 mt-5" %></div>
       </div>
       <p class="text_base mt-5">
         高山 寛 | Kan TAKAYAMA<br><br>
@@ -52,8 +52,8 @@
   </div>
 
   <h4 class="mb-5 mt-5"><span>Contact Me at</span></h4>
-  <div class="row justify-content-center mt-5 mb-5">
-    <div class="about_icon_box col-md-3 mt-5 mb-5">
+  <div class="row justify-content-center mt-5">
+    <div class="about_icon_box col-md-3 mt-5">
       <div class="row justify-content-center">
         <div class="mt-5 mb-3"><i class="far fa-envelope about_icon"></i></div>
       </div>
@@ -62,7 +62,7 @@
         kanstephentakayama@gmail.com
       </p>
     </div>
-    <div class="about_icon_box col-md-3 mt-5 mb-5">
+    <div class="about_icon_box col-md-3 mt-5">
       <div class="row justify-content-center">
         <div class="mt-5 mb-3"><i class="fab fa-instagram about_icon"></i></div>
       </div>
@@ -71,7 +71,9 @@
         @kan_takayama
       </p>
     </div>
-    <div class="about_icon_box col-md-3 mt-5 mb-5">
+  </div>
+  <div class="row justify-content-center">
+    <div class="about_icon_box col-md-3 mb-5">
       <div class="row justify-content-center">
         <div class="mt-5 mb-3"><i class="fab fa-twitter about_icon"></i></div>
       </div>
@@ -79,6 +81,15 @@
       <p class="text_base text-center mt-5 mb-5">
         @_1996112218<br>
         タカヤマカン
+      </p>
+    </div>
+    <div class="about_icon_box col-md-3 mb-5">
+      <div class="row justify-content-center">
+        <div class="mt-5 mb-3"><i class="fab fa-github about_icon"></i></div>
+      </div>
+      <h5 class="text_base text-center">Github</h5>
+      <p class="text_base text-center mt-5 mb-5">
+        kant9612
       </p>
     </div>
   </div>
