--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -36,11 +36,9 @@
 			<% end %>
 			<div class="row justify-content-center mt-5">
 				<div class="text-center">
-					<!--pagenate-->
       		<%= paginate @lists %>
 				</div>
 			</div>
-
 	</div>
 </div>
 <% else %>
@@ -63,7 +61,7 @@
 	</div>
 	<div class="mt-5 mb-5">
 		<h4 class="">How To Use<br><small>使い方</small></h4>
-		<div class="">
+		<div id="how_to_use">
 			<p class="text-center mt-5">
 				自分が観た映画や観たい映画をリストにして投稿することができます。<br>
 				同じ映画を観た人や観たい人と繋がり、感想や意見を共有してみましょう。<br><br>
