--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -35,7 +35,7 @@
     		    <% movie_user = movie.user %>
     		    <tr>
     		    	<div class="mt-2">『　<%= movie.title %>　』</div>
-    		    	<div class="mt-2">　ー<%= movie.impression %></div>
+    		    	<div class="mt-2 mb-5">　ー<%= movie.impression %></div>
     		    </tr>
     		  <% end %>
     		</table>
