[fix]seedデータ（ジャンル）

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -63,7 +63,8 @@
 		<h4 class="">How To Use<br><small>使い方</small></h4>
 		<div id="how_to_use">
 			<p class="text-center mt-5">
-				自分が観た映画や観たい映画をリストにして投稿することができます。<br>
+				自分が観た映画や観たい映画をリストにして投稿することができます。<br><br>
+				<span class="emphasis">ジャンルに縛られない、自分だけのムービーリストに "ME" というジャンルをつけてください。</span><br><br>
 				同じ映画を観た人や観たい人と繋がり、感想や意見を共有してみましょう。<br><br>
 				観る映画に迷ったら、他のユーザーのムービーリストから今日観る映画や<br>
 				次に見る映画を決めることもできます。<br><br>
