[add]RSpec-test total 56 examples

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -79,7 +79,7 @@
       </div>
       <h5 class="text_base text-center">Twitter</h5>
       <p class="text_base text-center mt-5 mb-5">
-        @_1996112218<br>
+        @kant9612<br>
         タカヤマカン
       </p>
     </div>
