[design]Top page subtitle, about page

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -28,7 +28,7 @@
       <h4 class="text_base">About Logo</h4>
       <p class="text_base mt-5 text-center">
         <p class="text-center"><span class="about_logo">B</span>e<span class="about_logo">hind</span> <span class="about_logo">Me</span><br>（ その人の後ろにあるもの　⇒　その人を作ったもの　※今回の場合「映画」 ）</p>
-        <p class="text-center"><span class="about_logo">B</span>ollywood <span class="about_logo">Hind</span>u <span class="about_logo">M</span>ovi<span class="about_logo">e</span><br> 米国Hollywoodと肩を並べ、名作映画を多数制作しているインドへのリスペクトも込めて。</p>
+        <p class="text-center"><span class="about_logo">B</span>ollywood <span class="about_logo">Hind</span>u <span class="about_logo">M</span>ovi<span class="about_logo">e</span><br> 自分に衝撃を与えたインド映画へのリスペクトも込めて。</p>
       </p>
     </div>
   </div>
