--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -49,7 +49,7 @@
 			<div class="screenimage3"></div>
 		</div>
 		<p class="logo logo_top">Bhind-Me</p>
-		<p class="logo_sub"><small>Share Culture, Share MOVIES</small></p>
+		<p class="logo_sub"><small>Share INSIGHT, Share MOVIES</small></p>
 	</div>
 	<div class="row mt-5 mb-5 top_btn_box">
 		<div class="col-sm-2 offset-sm-4">
